# AreaFunctionSynthesis

./: CMakeLists.txt  Default.params  README.md
src/Backend/: Constants.h  Dsp.cpp  Dsp.h  Geometry.cpp  Geometry.h  Glottis.cpp  Glottis.h  IirFilter.cpp  IirFilter.h  LfPulse.cpp  LfPulse.h  Matrix2x2.cpp  Matrix2x2.h  OneDimAreaFunction.cpp  OneDimAreaFunction.h  SerialPort.cpp  SerialPort.h  Signal.cpp  Signal.h  Synthesizer.cpp  Synthesizer.h  TdsModel.cpp  TdsModel.h  TimeFunction.cpp  TimeFunction.h  TlModel.cpp  TlModel.h  TriangularGlottis.cpp  TriangularGlottis.h  TridiagonalEquationSet.cpp  TridiagonalEquationSet.h  Tube.cpp  Tube.h  TwoMassModel.cpp  TwoMassModel.h  XmlHelper.cpp  XmlHelper.h  XmlNode.cpp  XmlNode.h
src/Frontend/: Application.cpp  Application.h  AreaFunctionPicture.cpp  AreaFunctionPicture.h  BasicPicture.cpp  BasicPicture.h  Data.cpp  Data.h  Graph.cpp  Graph.h  MainPage.cpp  MainPage.h  MainWindow.cpp  MainWindow.h  SilentMessageBox.h  SynthesisThread.cpp  SynthesisThread.h
wxWidgets-3.2.1/cocoa-build/: CMakeCache.txt  Makefile  cmake_install.cmake  uninstall.cmake  wx-config
wxWidgets-3.2.1/cocoa-build/lib/: libwx_baseu_net-3.2.0.1.0.dylib  libwx_baseu_xml-3.2.0.1.0.dylib  libwx_osx_cocoau_adv-3.2.0.1.0.dylib  libwx_osx_cocoau_aui-3.2.0.1.0.dylib  libwx_osx_cocoau_gl-3.2.0.1.0.dylib  libwx_osx_cocoau_html-3.2.0.1.0.dylib  libwx_osx_cocoau_media-3.2.0.1.0.dylib  libwx_osx_cocoau_propgrid-3.2.0.1.0.dylib  libwx_osx_cocoau_qa-3.2.0.1.0.dylib  libwx_osx_cocoau_ribbon-3.2.0.1.0.dylib  libwx_osx_cocoau_richtext-3.2.0.1.0.dylib  wxrc-3.2  (+2 more)
(+36 files in other folders)
